# ImageSegmentation

./: .gitignore  CMakeLists.txt  ImageSegmentation.sln  README.md
ImageSegmentation/: ImageSegmentation.cpp  ImageSegmentation.h  ImageSegmentation.ui  ImageSegmentation.vcxproj  ImageSegmentation.vcxproj.filters  ImageSegmentationMath.cpp
ImageSegmentation/PlainImages/: PSA2a - Ti area10 spot4 BSD.tif  PSA2a - Ti area10 spot4 SE.tif  PSA2a - Ti area9 sp2.tif  PSA2a - x kuk hore rez z5 BSD.tif  PSA2a - x kuk hore rez z5.tif  PSA2a dolevlavo mapa Fe.tif  PSA2a dolevlavo mapa Ti BSD.tif  PSA2a dolevlavo mapa Ti SE.tif  PSA2a dolevlavo x1 Fe.tif  PSA2a dolevlavo x1-1 Fe.tif  PSA2a dolevlavo x1az1 Fe.tif  PSA2a-x2 horerez z5 Ti BSD .tif  PSA2a-x2 horerez z5 Ti SE .tif  PSA2a-x3 horerez -2 Fe BSD.tif  PSA2a-x3 horerez -2 Fe SE.tif  PSA2a-x3 horerez Fe BSD .tif  PSA2a-x3 horerez Fe SE .tif  PSA2a-x4 horerez Ti BSD.tif  PSA2a-x4 horerez Ti SE.tif  PSA2a-x5 horerez Fe BSD.tif  PSA2a-x5 horerez Fe SE.tif  PSA2a-x5 horerez Fe SEa.tif
src/: ImageSegmentation.cpp  ImageSegmentation.h  ImageSegmentation.ui  ImageSegmentationMath.cpp
